# srp-protocol

./: README.md  srp-server-client.cpp
client/: CMakeLists.txt
client/src/: main.cpp
client/src/core/: client.cpp  client.h
client/src/crypto/: srp.cpp  srp.h
server/: CMakeLists.txt
server/src/: main.cpp
server/src/core/: server.cpp  server.h
server/src/crypto/: srp.cpp  srp.h
server/src/handlers/: request_handler.cpp  request_handler.h
